# Software-Engineering-CW2

./: .gitignore  README.md  SETAP_DB.PY  pubspec.yaml
.github/workflows/: noop.yml
android/app/: build.gradle.kts
android/app/src/main/kotlin/com/example/frontend_test/: MainActivity.kt
app/: pubspec.yaml
app/android/app/src/main/: AndroidManifest.xml
app/integration_test/: app_test.dart
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: authorisation.dart  homepage.dart
app/lib/views/: dashboard.dart  recipes.dart
app/lib/widgets/: navbar.dart  widgets.dart
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/test/: widget_test.dart
app/test/views/: dashboard_test.dart  recipes_test.dart  settings_test.dart
app/windows/: CMakeLists.txt
backend/: .gitignore  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
lib/: authorisation.dart  homepage.dart  main.dart
linux/: CMakeLists.txt
macos/Runner/Configs/: AppInfo.xcconfig
web/: index.html  manifest.json
windows/runner/: Runner.rc
